# onnxruntime

./: .gitattributes  CMakeLists.txt
include/core/providers/cpu/: cpu_provider_factory.h
include/core/providers/cuda/: cuda_provider_factory.h
